// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elvis Card Snapshots Type = detail should render correctly 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #fff;
  overflow: hidden;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 250px;
  max-width: 400px;
  padding: 24px;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid #e9e9e9;
}

.c1:hover {
  border: 2px solid #29d305;
  padding: 23px;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-left: 0;
  padding-right: 0;
}

.c3 {
  font-family: "Red Hat Text",Verdana,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 22px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: left;
  color: #000;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 5;
  line-clamp: 5;
  -webkit-box-orient: vertical;
}

.c5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 8px;
  border-radius: 4px;
  background: #e9e9e9;
  font-family: 'Red Hat Text','Verdana, sans-serif';
  font-size: 11px;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  color: #000;
  white-space: nowrap;
}

.c4 {
  margin-top: 16px;
}

.c7 {
  position: absolute;
  right: 16px;
  bottom: 16px;
  width: 40px;
  height: 40px;
  padding: 8px;
  border-radius: 50%;
  background: #fff;
  display: none;
}

.c0:hover .c6 {
  display: block;
}

.c9 {
  position: absolute;
  right: 16px;
  top: 16px;
}

.c0:hover .c8 {
  right: 15px;
  top: 15px;
}

<div
  className="c0 c1"
  data-testid="card-area"
  label="Label"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  shape="square"
  type="detail"
  width="100%"
>
  <div
    className="c2"
    data-testid="card-content"
    shape="square"
  >
    <div
      className="c3"
      data-testid="card-description"
      shape="square"
      type="detail"
    >
      Description
    </div>
    <div
      className="c4"
      data-testid="card-label-container"
    >
      <label
        className="c5"
        data-testid="card-label"
      >
        Label
      </label>
    </div>
  </div>
  <div
    className="c6 c7"
    data-testid="card-detail-hover-arrow"
  >
    <div
      className=""
    >
      <i
        aria-hidden="true"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg viewBox=\\"0 0 24 24\\" aria-hidden=\\"true\\" width=\\"24px\\" height=\\"24px\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M23.5 12a.75.75 0 01-.75.75h-22a.75.75 0 010-1.5h22a.75.75 0 01.75.75z\\" fill=\\"#000\\"/><path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M23.776 11.482c.299.286.299.75 0 1.037L13.052 22.785a.79.79 0 01-1.083 0 .712.712 0 010-1.037L22.151 12 11.969 2.252a.711.711 0 010-1.037.79.79 0 011.083 0l10.724 10.267z\\" fill=\\"#000\\"/></svg>",
          }
        }
        style={
          Object {
            "display": "flex",
          }
        }
      />
    </div>
  </div>
  <div
    className="c8 c9"
    data-testid="card-corner-icon"
  >
    CornerIcon
  </div>
</div>
`;

exports[`Elvis Card Snapshots Type = simple should render correctly circle 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: transparent;
  overflow: hidden;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 112px;
  max-width: 400px;
  padding: 1px;
  width: 100%;
  height: 100%;
  aspect-ratio: 1/1;
  border-radius: 50%;
  border: 1px solid transparent;
}

.c1:hover {
  border: 2px solid #29d305;
  padding: 0;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 24px;
  padding-right: 24px;
}

.c5 {
  font-family: "Red Hat Text",Verdana,sans-serif;
  font-size: 16px;
  font-weight: 500;
  line-height: 28px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: center;
  color: #000;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 1;
  line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c6 {
  font-family: "Red Hat Text",Verdana,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 22px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: center;
  color: #000;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 1;
  line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c4 {
  font-family: "Red Hat Display",Verdana,sans-serif;
  font-size: 44px;
  font-size-mobile: 32px;
  font-weight: 900;
  line-height: 53px;
  line-height-mobile: 34px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: center;
  color: #000;
  white-space: nowrap;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
}

.c0:hover .c3 {
  -webkit-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<div
  className="c0 c1"
  data-testid="card-area"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  shape="circle"
  type="simple"
  width="100%"
>
  <div
    className="c2"
    data-testid="card-content"
    shape="circle"
  >
    <div
      className="c3 c4"
      data-testid="card-icon"
    >
      Icon
    </div>
    <div
      className="c5"
      data-testid="card-header"
      shape="circle"
      type="simple"
    >
      Header
    </div>
    <div
      className="c6"
      data-testid="card-description"
      shape="circle"
      type="simple"
    >
      Description
    </div>
  </div>
</div>
`;

exports[`Elvis Card Snapshots Type = simple should render correctly square 1`] = `
.c1 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #fff;
  overflow: hidden;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 112px;
  max-width: 400px;
  padding: 24px;
  width: 100%;
  height: 100%;
  border-radius: 8px;
  border: 1px solid #e9e9e9;
}

.c1:hover {
  border: 2px solid #29d305;
  padding: 23px;
  cursor: pointer;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  padding-left: 0;
  padding-right: 0;
}

.c7 {
  font-family: "Red Hat Text",Verdana,sans-serif;
  font-size: 14px;
  font-weight: 500;
  line-height: 22px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: center;
  color: #000;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 1;
  line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c8 {
  font-family: "Red Hat Text",Verdana,sans-serif;
  font-size: 11px;
  font-weight: 400;
  line-height: 14px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: center;
  color: #000;
  display: -webkit-box;
  overflow: hidden;
  -webkit-line-clamp: 1;
  line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c6 {
  font-family: "Red Hat Display",Verdana,sans-serif;
  font-size: 44px;
  font-size-mobile: 32px;
  font-weight: 900;
  line-height: 53px;
  line-height-mobile: 34px;
  -webkit-letter-spacing: unset;
  -moz-letter-spacing: unset;
  -ms-letter-spacing: unset;
  letter-spacing: unset;
  font-style: unset;
  text-transform: unset;
  color: inherit;
  text-align: center;
  color: #000;
  white-space: nowrap;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
}

.c0:hover .c5 {
  -webkit-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

.c3 {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  border-top: 4px solid #ffa000;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c0:hover .c2 {
  display: none;
}

<div
  className="c0 c1"
  data-testid="card-area"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  shape="square"
  type="simple"
  width="100%"
>
  <div
    className="c2 c3"
    data-testid="card-colored-line"
  />
  <div
    className="c4"
    data-testid="card-content"
    shape="square"
  >
    <div
      className="c5 c6"
      data-testid="card-icon"
    >
      Icon
    </div>
    <div
      className="c7"
      data-testid="card-header"
      shape="square"
      type="simple"
    >
      Header
    </div>
    <div
      className="c8"
      data-testid="card-description"
      shape="square"
      type="simple"
    >
      Description
    </div>
  </div>
</div>
`;
